--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^5.3.3",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
