--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
+    "gatsby-plugin-google-gtag": "^5.12.1",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-react-helmet": "^6.12.0",
