--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "react-youtube": "^10.1.0",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   },
