--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "gatsby-plugin-google-gtag": "^5.12.1",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-nprogress": "^5.13.1",
     "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
-    "gatsby-remark-copy-linked-files": "^6.12.0",
+    "gatsby-plugin-typography": "^5.13.1",
+    "gatsby-remark-copy-linked-files": "^6.13.1",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^7.12.0",
-    "gatsby-remark-prismjs": "^7.12.0",
-    "gatsby-remark-smartypants": "^6.12.0",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-remark-smartypants": "^6.13.1",
     "gatsby-source-filesystem": "^5.12.0",
-    "gatsby-transformer-remark": "^6.12.0",
+    "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.12.0",
     "gsap": "^3.12.2",
     "prismjs": "^1.29.0",
@@ -29,7 +31,9 @@
     "react-redux": "^8.1.2",
     "react-youtube": "^10.1.0",
     "styled-components": "^5.3.3",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "typography": "^0.16.24",
+    "typography-theme-bootstrap": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
